<resources>
    <string name="app_name">Nandur</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="or">or</string>
    <string name="login">Log In</string>
    <string name="have_account">Already have an account?</string>
    <string name="not_account">Not have an account?</string>
    <string name="masukan_email">Masukan Email</string>
    <string name="masukan_password">Masukan Password</string>
    <string name="masukan_nama">Masukan Nama</string>
    <string name="password_sama">Masukan Password Yang Sama</string>
    <string name="signin">Sign In</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_tanaman">Nama Tanaman</string>
    <string name="loriem_epsum">Lorem ipsum dolor sit amet consectetur. Pulvinar varius venenatis commodo enim. Vestibulum penatibus mi vitae leo egestas viverra elit vel nulla.</string>
    <string name="informasi_terkait">Informasi Terkait</string>
    <string name="lokasi_anda">Lokasi Anda</string>
    <string name="location">Semarang, Jawa Tengah, Indonesia</string>
    <string name="tanam">Tanam</string>
    <string name="timelinebulan">4 - 5 Bulan</string>
    <string name="durasi_panen">Durasi Panen</string>
    <string name="harga_tanaman">5000</string>
    <string name="lorem">Lorem ipsum dolor sit amet consectetur. Egestas neque tellus sed pharetra. Nunc id adipiscing ante duis non netus suspendisse sed. Facilisis eget at sagittis massa in porttitor velit maecenas ullamcorper. Nibh potenti interdum lectus phasellus suscipit cursus viverra. Purus dolor magnis non felis integer in. Lorem cursus mattis amet in praesent facilisi. In in dui facilisi massa integer amet pellentesque. Nec ut placerat turpis sit adipiscing est feugiat enim. Mi lobortis nec sed sit. Tortor quisque iaculis et volutpat nisi.</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="reviewer">4.5</string>
    <string name="total_harga">Total Harga</string>
    <string name="nama_bibit">Nama Bibit</string>
    <string name="rp">Rp.</string>
    <string name="tambah_menu_lain">+ Tambah Menu Lain</string>
    <string name="tanaman_sehat">Tanaman Sehat</string>
    <string name="timeline">Timeline</string>
    <string name="jenis_tanaman">Jenis Tanaman</string>
    <string name="daftar_cart">Daftar Cart</string>
    <string name="pesan">Pesan</string>
    <string name="profile_saya">Profile Saya</string>
    <string name="detail_email">dimassurya@gmail.com</string>
    <string name="detail_username">Dimas Surya Wirastama</string>
    <string name="logout">Logout</string>
    <string name="cari_tanaman">Cari Bahan atau Tanaman..?</string>
    <string name="tanaman_anda">Tanaman Anda</string>
    <string name="number">1</string>
    <string name="tanaman">Tanaman</string>
    <string name="cari_tanaman_anda">Cari tanaman anda</string>
    <string name="cari_jenis_tanaman">Cari jenis tanaman</string>
    <string name="user">User</string>
    <string name="hai">Hai</string>
    <string name="scan">Scan</string>
    <string name="image">Image</string>
    <string name="deteksi_tanaman">Deteksi Tanaman</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="jumlah_penanaman">Jumlah Penanaman</string>
    <string name="jml_penanam">21</string>
    <string name="sisa_waktu_panen">Sisa Waktu Panen</string>
    <string name="bahasa">Bahasa</string>
    <string name="bahasa_asal">Indonesia</string>
    <string name="siap_panen">Siap panen</string>
    <string name="camera">Camera</string>
    <string name="image_description">Deskripsi Gambar Anda</string>

    // Login Activity
    <string name="halaman_masuk">Halaman Login</string>
    <string name="kolom_nama">Isi nama dulu!</string>
    <string name="kolom_email">Isi email dulu!</string>
    <string name="kolom_password">Isi password dulu!</string>
    <string name="halaman_registrasi">Halaman Registrasi</string>
    <string name="password_kurangtepat">Kata sandi anda tidak cocok</string>
    <string name="password_length_error">Kata sandi harus setidaknya 8 karakter</string>
    <string name="search">Search</string>
    <string name="hasil_prediksi">Hasil Prediksi</string>
</resources>