<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_itemCart"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:id="@+id/linear_cartOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_menuCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp">

            <CheckBox
                android:id="@+id/checkbox_Cart"
                android:layout_width="26dp"
                android:layout_height="26dp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="5dp">

            <ImageView
                android:id="@+id/iv_bibitCart"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="centerCrop"
                android:src="@drawable/biji" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linear_cartTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_namaBibitCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_bibit"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_keteranganBibitCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loriem_epsum"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <LinearLayout
                android:id="@+id/linear_cartThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_hargaCart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/harga_tanaman"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    app:cardCornerRadius="2dp">

                    <ImageView
                        android:id="@+id/iv_deleteCart"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@drawable/baseline_delete_24" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardCornerRadius="2dp">

                    <ImageView
                        android:id="@+id/iv_addCart"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@drawable/baseline_add_24" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_totalCart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/number"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardCornerRadius="2dp">

                    <ImageView
                        android:id="@+id/iv_removeCart"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@drawable/baseline_remove_24" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>